# tempo_plumes_detection

./: .gitignore  README.md  ex_plants.csv  oris_coords_tz.csv  pyproject.toml  run_plume_batch.py  single-plume.ipynb  submit_batch  submit_plume_batch  submit_summary_perplant  summarize_netcdf.py  summarize_netcdf_perplant.py
tempo_plumes/: __init__.py  background.py  batch.py  cli.py  detect.py  export.py  geo.py  io.py  match.py  patches.py  pipeline.py
